Format with Prettier

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="icon" href="/baby.ico" />
     <link rel="apple-touch-icon" href="/baby.png" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Roboto&display=swap" rel="stylesheet" />
     <title>Liste de naissance de little bubba</title>
   </head>
   <body>
